--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
 			rel="stylesheet"
 		/>
-		<base href="SVG-Fun" />
+		<base href="https://siddharth-gandhi.github.io/SVG-Fun/" />
 		<title>Fun with SVGs</title>
 		<style>
 			::marker {
@@ -45,7 +45,7 @@
 			</h1>
 			<ul>
 				<li>
-					<h2><a href="/triangle.html">Triangle SVG</a></h2>
+					<h2><a href="triangle.html">Triangle SVG</a></h2>
 				</li>
 				<li>
 					<h2><a href="/phone.html">Phone SVG</a></h2>
