--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<h2><a href="triangle.html">Triangle SVG</a></h2>
 				</li>
 				<li>
-					<h2><a href="phone.html">Phone SVG</a></h2>
+					<h2><a href="`phone.html">Phone SVG</a></h2>
 				</li>
 			</ul>
 		</div>
