--- a/triangle.html
+++ b/triangle.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+			crossorigin="anonymous"
+		/>
 		<title>Triangle SVG</title>
 		<style>
 			.container {
@@ -11,6 +17,7 @@
 				justify-content: center;
 				align-items: center;
 				height: 100vh;
+				flex-direction: column;
 			}
 			:root {
 				--dark-color: #c76e3c;
@@ -44,6 +51,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<h1>Click it</h1>
 			<svg
 				width="120"
 				height="100"
